--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "flatpickr",
+  "name": "@koka58/flatpickr",
   "version": "4.6.4",
-  "description": "A lightweight, powerful javascript datetime picker",
+  "description": "A lightweight, powerful javascript datetime picker (fork to publish)",
   "scripts": {
     "build": "run-s build:pre build:build build:types build:post",
     "build:pre": "rimraf dist",
